--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -67,4 +67,10 @@
     <string name="isupdate">当前为运营商网络，是否升级？</string>
     <string name="immediately_update">立即更新</string>
     <string name="removing">移除中...</string>
+    <string name="aboutrf1">关于RF1</string>
+    <string name="app_agreement">《软件许可及服务协议》</string>
+    <string name="version">版本 v</string>
+    <string name="SimplifiedChinese">简体中文</string>
+    <string name="followingsystem">跟随系统</string>
+    <string name="firmwareupdate">固件升级</string>
 </resources>
